<resources>
    <string name="app_name">MaiApp</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username1">Username</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
