<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/name"
        android:ems="10"
        android:fontFamily="@font/unispacerg"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHint="#A9000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/pswd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/name"
        android:ems="10"
        android:fontFamily="@font/unispacerg"
        android:gravity="center"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:textColorHint="#A9000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616"
        tools:targetApi="o" />

    <Button
        android:id="@+id/sin"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:background="@drawable/signup"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/log_in"
        android:fontFamily="@font/unispacerg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/sup1"
        android:layout_width="145dp"
        android:layout_height="29dp"
        android:background="@drawable/signup"
        android:text="@string/sign_up"
        android:fontFamily="@font/unispacerg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" tools:targetApi="jelly_bean" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>